test/org/midica/testfiles/failing/include-without-param.midica
INCLUDE_FILE inc/instruments.midica

INCLUDE